the WorldBank data viz, instead of writing
geom_point(aes(x=life.expectancy)) we could write
geom_point(aes_string(x=input$xvar)) with selectInput('xvar', 'X
Variable', names(dataset))). However I fear that it may end up not
being very responsive, since the animint would have to be re-compiled
by the shiny server after every change to the shiny input.

2014.10.10

BUGFIX: when nest_order contains PANEL and group, group should come
last.

2014.10.9

BUGFIX: use eActions(enter_elements) to prevent them from flying in
from the upper left.

2014.9.26

DSL: multiple selection! Now you can declare each interaction variable
as either single or multiple selection using an option list:
selector.types=list(year="single", country="multiple"). If this option
list is not specified, single selection is used by default for all
selectors. The interface to multiple selection should be simple: click
a country to toggle the selection state from off to on.

2014.8.25

GGPLOT: facet_* and coord_fixed are now fully functional.
BUGFIX: ticks/labels for scale_x_time are rendered properly.

2014.6.10

Restore support for numeric legends.

2014.6.2

DSL: Custom title for the generated HTML page using option
title="TITLE". This title is also used for the animint2gist
description.

DSL: aes(href=sprintf("http://genome.ucsc.edu/%s", id)) to have
clicking open a new web browser tab at that URL.

OUTPUT: gg2animint is now deprecated, use animint2dir instead.

animint2gist now checks for and ignores directories and files of size
0, which were causing
Error: client error: (422) Unprocessable Entity (WebDAV; RFC 4918)

2014.5.22

All tests are now working.

The animist2gist function posts relevant files as a gist and allows
one to automatically view/share plots via http://bl.ocks.org

Moved a number of packages from DEPENDS to IMPORTS 
(except for ggplot2 and proto). Also added gistr to SUGGESTS 
as it is needed for animist2gist.

2014.5.17

Fixed the "too many legend entires" bug. For more info,