@@ -1,15 +1,14 @@
-# Generated by roxygen2 (4.0.1): do not edit by hand
-
+S3method(knit_print,animint)
+export("#'")
 export(animint2dir)
 export(animint2gist)
 export(animintOutput)
-export(geom_tallrect)
+export(geom_widerect)
 export(getLegendList)
 export(gg2animint)
 export(gg2animint_knitr)
 export(is.rgb)
 export(is.showSelected)
-export(knit_print.animint)
 export(makeDocs)
 export(make_bar)
 export(make_tallrect)
