@@ -117,16 +117,27 @@ wb.mult <-
        title="World Bank data (multiple selection)")
 animint2dir(wb.mult, "WorldBank-multiple")
 
-TS <- function(df)data.frame(df, facet="Years")
-SCATTER <- function(df)data.frame(df, facet="Fertility rate")
+BOTH <- function(df, top, side){
+  data.frame(df,
+             top=factor(top, c("Fertility rate", "Years")),
+             side=factor(side, c("Years", "Life expectancy")))
+}
+TS <- function(df)BOTH(df, "Years", "Life expectancy")
+SCATTER <- function(df)BOTH(df, "Fertility rate", "Life expectancy")
+TS2 <- function(df)BOTH(df, "Fertility rate", "Years")
 years <- unique(not.na[, "year", drop=FALSE])
+min.years <- not.na %.%
+  group_by(country) %.%
+  filter(year==min(year)) %.%
+  mutate(year=1958)
 wb.facets <-
   list(ts=ggplot()+
        xlab("")+
+       ylab("")+
        geom_tallrect(aes(xmin=year-1/2, xmax=year+1/2,
                          clickSelects=year),
                      data=TS(years), alpha=1/2)+
-       theme_animint(width=1000)+
+       theme_animint(width=1000, height=800)+
        geom_line(aes(year, life.expectancy, group=country, colour=region,
                      clickSelects=country),
                  data=TS(not.na), size=4, alpha=3/5)+
@@ -136,7 +147,18 @@ wb.facets <-
        geom_text(aes(year, life.expectancy, colour=region, label=country,
                      showSelected=country,
                      clickSelects=country),
-                  data=TS(max.years), hjust=0)+
+                  data=TS(min.years), hjust=1)+
+       
+       geom_line(aes(fertility.rate, year, group=country, colour=region,
+                     clickSelects=country),
+                 data=TS2(not.na), size=4, alpha=3/5)+
+       geom_point(aes(fertility.rate, year, color=region, size=population,
+                      showSelected=country, clickSelects=country),
+                  data=TS2(not.na))+
+       geom_widerect(aes(ymin=year-1/2, ymax=year+1/2,
+                         clickSelects=year),
+                     data=TS2(years), alpha=1/2)+
+       
        geom_point(aes(fertility.rate, life.expectancy, clickSelects=country,
                       showSelected=year, colour=region, size=population,
                       key=country), # key aesthetic for animated transitions!
@@ -147,7 +169,7 @@ wb.facets <-
                      key=country), #also use key here!
                  data=SCATTER(not.na))+
        scale_size_animint(breaks=10^(5:9))+
-       facet_grid(.~facet, scales="free")+
+       facet_grid(side ~ top, scales="free")+
        geom_text(aes(5, 85, label=paste0("year = ", year),
                      showSelected=year),
                  data=SCATTER(years)),
