@@ -1,0 +1,10 @@
+\name{animintOutput}
+\alias{animintOutput}
+\title{Create an shiny output binding}
+\usage{
+animintOutput(inputId)
+}
+\description{
+Create an shiny output binding
+}
+
