@@ -2,7 +2,7 @@
 \alias{knit_print.animint}
 \title{Insert an interactive animation into an R markdown document using a customized print method.}
 \usage{
-knit_print.animint(x, options, ...)
+\method{knit_print}{animint}(x, options, ...)
 }
 \arguments{
   \item{x}{named list of ggplots and option lists to pass
