@@ -1,0 +1,75 @@
+context("geom_widerect")
+
+data(WorldBank)
+not.na <- subset(WorldBank, !(is.na(life.expectancy) | is.na(fertility.rate)))
+BOTH <- function(df, top, side){
+  data.frame(df,
+             top=factor(top, c("Fertility rate", "Years")),
+             side=factor(side, c("Years", "Life expectancy")))
+}
+TS <- function(df)BOTH(df, "Years", "Life expectancy")
+SCATTER <- function(df)BOTH(df, "Fertility rate", "Life expectancy")
+TS2 <- function(df)BOTH(df, "Fertility rate", "Years")
+years <- unique(not.na[, "year", drop=FALSE])
+wb.facets <-
+  list(ts=ggplot()+
+       xlab("")+
+       geom_tallrect(aes(xmin=year-1/2, xmax=year+1/2,
+                         clickSelects=year),
+                     data=TS(years), alpha=1/2)+
+       theme_animint(width=1000, height=800)+
+       geom_line(aes(year, life.expectancy, group=country, colour=region,
+                     clickSelects=country),
+                 data=TS(not.na), size=4, alpha=3/5)+
+       geom_point(aes(year, life.expectancy, color=region, size=population,
+                      showSelected=country, clickSelects=country),
+                  data=TS(not.na))+
+       
+       geom_line(aes(fertility.rate, year, group=country, colour=region,
+                     clickSelects=country),
+                 data=TS2(not.na), size=4, alpha=3/5)+
+       geom_point(aes(fertility.rate, year, color=region, size=population,
+                      showSelected=country, clickSelects=country),
+                  data=TS2(not.na))+
+       geom_widerect(aes(ymin=year-1/2, ymax=year+1/2,
+                         clickSelects=year),
+                     data=TS2(years), alpha=1/2)+
+       
+       geom_point(aes(fertility.rate, life.expectancy, clickSelects=country,
+                      showSelected=year, colour=region, size=population,
+                      key=country), # key aesthetic for animated transitions!
+                  data=SCATTER(not.na))+
+       geom_text(aes(fertility.rate, life.expectancy, label=country,
+                     showSelected=country, showSelected2=year,
+                     clickSelects=country,
+                     key=country), #also use key here!
+                 data=SCATTER(not.na))+
+       scale_size_animint(breaks=10^(5:9))+
+       facet_grid(side ~ top, scales="free")+
+       geom_text(aes(5, 85, label=paste0("year = ", year),
+                     showSelected=year),
+                 data=SCATTER(years)),
+       time=list(variable="year",ms=3000),
+       bar=ggplot()+
+       theme_animint(height=2400)+
+       geom_bar(aes(country, life.expectancy, fill=region,
+                    showSelected=year, clickSelects=country,
+                    key=country),
+                data=not.na, stat="identity", position="identity")+
+       coord_flip(),
+       duration=list(year=1000),
+       first=list(year=1975, country=c("United States", "Vietnam")),
+       selector.types=list(country="multiple"),
+       title="World Bank data (multiple selection, facets)")
+
+test_that("widerect renders a <rect> for every year", {
+  info <- animint2HTML(wb.facets)
+  node.set <-
+    getNodeSet(info$html,
+               '//g[@class="geom6_widerect_ts"]//g[@class="PANEL1"]//rect')
+  expect_equal(length(node.set), nrow(years))
+  for(node in node.set){
+    sizes <- as.numeric(xmlAttrs(node)[c("height", "width")])
+    expect_true(all(sizes > 0))
+  }
+})
