@@ -174,6 +174,9 @@ by the shiny server after every change to the shiny input.
 
 2014.10.10
 
+GGPLOT: geom_widerect is now defined in geoms.R and it is rendered by
+animint.js.
+
 BUGFIX: when nest_order contains PANEL and group, group should come
 last.
 
